# gui-app-template

./: CMakeLists.txt  README.md
gui-app-template/: GuiApp.cpp  GuiApp.hpp  GuiApp.test.cpp  main.cpp
gui-app-template/fonts/: RobotoMedium.cpp  Tool.txt
gui-app-template/utility/: MaterialIcons.cpp  RobotoMedium.cpp  RobotoRegular.cpp  Tool.txt
